<resources>
    <string name="app_name">Digital Receipt</string>

    <!-- Login Screen -->
    <string name="login_screen_title">Digital Receipt</string>
    <string name="login_screen_slogan">Reducing environmental impacts and preserving the environment!</string>
    <string name="login_screen_logo_description">Sidi\'s logo</string>
    <string name="login_screen_login_button_text">Login!</string>
    <string name="login_screen_login_edittext">Phone number or Email</string>
    <string name="login_screen_password_edittext">Password</string>
    <string name="login_screen_new_account_button_text">New Account</string>
    <string name="login_screen_forgot_password_text">Forgot password?</string>
    <string name="login_screen_message_wrong_user_text">Email or Password is wrong</string>

    <!-- Header -->
    <string name="header_screen_title">Default name</string>
    <string name="header_create_new_account">Create new account</string>
    <string name="header_back_button">Back button</string>
    <string name="header_avatar">Avatar image</string>
    <string name="header_screen_all_receipts">All Receipts</string>
    <string name="header_receipt_name">Receipt details</string>
    <string name="header_receipt_share">Share receipt</string>

    <!-- Create User -->
    <string name="create_user_name">Name</string>
    <string name="create_user_edittext_name">Enter your name</string>
    <string name="create_user_phone_number">Phone number</string>
    <string name="create_user_edittext_phone_number">Enter your phone number</string>
    <string name="create_user_email">Email</string>
    <string name="create_user_edittext_email">Enter your email address</string>
    <string name="create_user_cpf">CPF</string>
    <string name="create_user_edittext_cpf">Enter your CPF number</string>
    <string name="create_user_password">Password</string>
    <string name="create_user_edittext_password">Enter your password</string>
    <string name="create_user_confirm_password">Confirm password</string>
    <string name="create_user_edittext_confirm_password">Confirm your password</string>
    <string name="create_user_terms_service">I agree with the Terms of Service and Privacy Policy information.</string>
    <string name="create_user_register">Register!</string>

    <!-- Create User - Error Message -->
    <string name="create_user_name_error">Name is empty</string>
    <string name="create_user_phone_number_error">Phone number is empty</string>
    <string name="create_user_email_error">Email is not valid</string>
    <string name="create_user_cpf_error">CPF is not valid</string>
    <string name="create_user_password_error">Password doesn\'t match or is empty</string>
    <string name="create_user_terms_error">You have to accept the terms</string>

    <!-- Forgot password -->
    <string name="forgot_password_header">Forgot password</string>
    <string name="forgot_password_reset">Reset!</string>

    <!-- Home Screen -->
    <string name="home_screen_qrcode">QR Code button</string>
    <string name="home_screen_add_button">Add category button</string>
    <string name="home_screen_default_category">Default category</string>
    <string name="home_screen_all_receipts">All Receipts</string>
    <string name="home_screen_favorite_receipts">Favorite</string>
    <string name="home_screen_zero_receipt">0 receipt</string>
    <string name="home_screen_receipt">%s receipt</string>
    <string name="home_screen_receipts">%s receipts</string>
    <string name="home_screen_welcome">Hi, %s</string>

    <!-- Create Category -->
    <string name="home_screen_create_category_title">Create category</string>
    <string name="home_screen_create_category_message">Enter the name of the new category:</string>
    <string name="home_screen_create_category_positive_button">Create</string>
    <string name="home_screen_create_category_negative_button">Cancel</string>

    <!-- Code Message -->
    <string name="code_message_access_api_error">Error accessing API.</string>
    <string name="code_message_incorrect_email_or_password">Incorrect email or password.</string>

    <!-- All Receipts -->
    <string name="all_receipts_search">Search a receipt…</string>
    <string name="all_receipts_merchant_icon">Merchant icon</string>
    <string name="all_receipts_default_merchant_name">Merchant name</string>
    <string name="all_receipts_default_value">$10</string>
    <string name="all_receipts_default_date">01/01/2000</string>
    <string name="all_receipts_no_item">No items match a search</string>

    <!-- Receipt details -->
    <string name="receipt_details_merchant_image">Merchant image</string>
    <string name="receipt_details_default_merchant_name">Default Merchant</string>
    <string name="receipt_details_merchant_name">Merchant Name: %s</string>
    <string name="receipt_details_default_value">$ 0,00</string>
    <string name="receipt_details_value">Value: $ %s</string>
    <string name="receipt_details_default_date">01/01/2000 01:00 AM</string>
    <string name="receipt_details_default_payment">Credit card: Visa 9999</string>
    <string name="receipt_details_payment">Payment: %s, %s</string>
    <string name="receipt_details_payment_credit_card">Credit Card</string>
    <string name="receipt_details_payment_debit_card">Debit Card</string>
    <string name="receipt_details_default_authentication_code">Authentication Code: xxxx-xxxx-xxxx</string>
    <string name="receipt_details_authentication_code">Authentication Code: \n %s</string>
    <string name="receipt_details_favorite">Favorite</string>
    <string name="receipt_details_add_category">Add category</string>

    <!-- Add or Remove category -->
    <string name="add_or_remove_category_icon_description">Folder icon</string>
    <string name="add_or_remove_category_title">Add or Remove a Category!</string>
    <string name="add_or_remove_category_description">Select the desired category:</string>
</resources>