<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--  Header  -->
    <RelativeLayout
        android:id="@+id/forgot_password_header"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/header_back_button"
            style="@style/headerBackButton"
            android:onClick="backButton" />

        <TextView
            android:id="@+id/forgot_password_text_header"
            style="@style/DefaultText"
            android:layout_centerInParent="true"
            android:text="@string/forgot_password_header"
            android:textAlignment="center"
            android:textSize="@dimen/header_name_text_size" />

        <ImageView
            android:id="@+id/forgot_password_empty_slot"
            style="@style/headerEmpty" />
    </RelativeLayout>

    <!-- Phone Number -->
    <TextView
        android:id="@+id/forgot_password_phone_number_text"
        style="@style/createUserText"
        android:text="@string/create_user_phone_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_header" />

    <EditText
        android:id="@+id/forgot_password_phone_number_edittext"
        style="@style/createUserEditText"
        android:autofillHints="name"
        android:hint="@string/create_user_edittext_phone_number"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_phone_number_text" />

    <TextView
        android:id="@+id/forgot_password_phone_number_text_error"
        style="@style/createUserErrorText"
        android:text="@string/create_user_name_error"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_phone_number_edittext" />

    <!-- E-mail -->
    <TextView
        android:id="@+id/forgot_password_email_text"
        style="@style/createUserText"
        android:text="@string/create_user_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_phone_number_edittext" />

    <EditText
        android:id="@+id/forgot_password_email_edittext"
        style="@style/createUserEditText"
        android:autofillHints="name"
        android:hint="@string/create_user_edittext_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_email_text" />

    <TextView
        android:id="@+id/forgot_password_email_text_error"
        style="@style/createUserErrorText"
        android:text="@string/create_user_email_error"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_email_edittext" />

    <!-- CPF -->
    <TextView
        android:id="@+id/forgot_password_cpf_text"
        style="@style/createUserText"
        android:text="@string/create_user_cpf"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_email_edittext" />

    <EditText
        android:id="@+id/forgot_password_cpf_edittext"
        style="@style/createUserEditText"
        android:autofillHints="name"
        android:hint="@string/create_user_edittext_cpf"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_cpf_text" />

    <TextView
        android:id="@+id/forgot_password_cpf_text_error"
        style="@style/createUserErrorText"
        android:text="@string/create_user_cpf_error"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_cpf_edittext" />

    <!-- Button reset -->
    <Button
        android:id="@+id/forgot_password_reset"
        style="@style/DefaultButton"
        android:layout_marginBottom="@dimen/login_screen_margin_bottom"
        android:text="@string/forgot_password_reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>