<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.LoginScreenActivity">

    <ImageView
        android:id="@+id/sidiLogo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_screen_logo_width"
        android:contentDescription="@string/login_screen_logo_description"
        android:src="@drawable/sidi_logo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_title"
        style="@style/loginScreenTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_screen_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sidiLogo" />

    <TextView
        android:id="@+id/txt_slogan"
        style="@style/loginScreenSloganText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_screen_slogan"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_title" />

    <EditText
        android:id="@+id/user_email"
        style="@style/loginScreenSize"
        android:layout_marginBottom="@dimen/login_screen_margin_bottom"
        android:autofillHints="emailAddress"
        android:hint="@string/login_screen_login_edittext"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/user_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/user_password"
        style="@style/loginScreenSize"
        android:autofillHints="password"
        android:hint="@string/login_screen_password_edittext"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/wrong_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/wrong_user"
        style="@style/loginScreenWrongUserText"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login"
        style="@style/loginScreenButton"
        android:layout_marginBottom="@dimen/login_screen_margin_bottom"
        android:text="@string/login_screen_login_button_text"
        app:layout_constraintBottom_toTopOf="@id/new_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/new_account"
        style="@style/loginScreenButton"
        android:layout_marginBottom="@dimen/login_screen_button_new_account_margin"
        android:text="@string/login_screen_new_account_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/forgot_password"
        style="@style/loginScreenForgotPasswordText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_account" />

</androidx.constraintlayout.widget.ConstraintLayout>